2017-03-21  Bruno Haible  <bruno@clisp.org>

	Replace the 'newer' utility with a portable shell alternative.
	Jörg Höhle found that "newer $file1 $file2" is equivalent to
	test -f $file1 && \
	  { test ! -f $file2 || test -n "`find $file1 -prune -newer $file2`"; }
	* src/makemake.in (UTILS): Remove 'newer'.
	Use a 'find' based shell command instead of the 'newer' program.
	* utils/newer.c: Remove file.
	* Makefile.devel (GNULIB_CORE): Remove stat-time, timespec.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* build-aux/config.sub: Update from gnulib git.

2017-03-20  Sam Steingold  <sds@gnu.org>

	Fix non-blocking sockets on Mac OS X.
	* unix.d (NO_BLOCK_DECL): Do not accept handle.
	(START_NO_BLOCK): Accept on_fail, move function call from
	NO_BLOCK_DECL here.
	(END_NO_BLOCK): Accept on_fail.
	* win32.d (NO_BLOCK_DECL, START_NO_BLOCK, END_NO_BLOCK): Add.
	* socket.d (connect_via_ip): Use
	NO_BLOCK_DECL/START_NO_BLOCK/END_NO_BLOCK.
	* stream.d (listen_handle): Update the use of
	NO_BLOCK_DECL/START_NO_BLOCK/END_NO_BLOCK.
	* unixaux.d (fd_read, fd_write, sock_write): Ditto.
	Reported by Karsten Poeck <Karsten.Poeck@gmail.com>.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Prepare beta release.
	* version.sh: Bump version number to 2.49.50.
	* version.h, aclocal.m4, src/configure: Regenerated.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix the recognition of Solaris.
	* lispbibl.d (UNIX_SUNOS5): Include also Solaris/x86_64.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix recognition of native Windows as target platform.
	* makemake.in (TOS): Set based on $host_os from autoconf.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Don't generate a broken Makefile when using the option --host/--build.
	Rationale:
	- clisp cannot be cross-built anyway (because of the memory image).